--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,7 +25,10 @@
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "pip3 install --user -r requirements.txt",
-	"postCreateCommand": "wget https://raw.githubusercontent.com/kitakou0313/dotfiles/main/installer.sh && chmod 777 installer.sh && bash installer.sh",
+	"postCreateCommand": [
+		"bach -c 'wget https://raw.githubusercontent.com/kitakou0313/dotfiles/main/installer.sh && chmod 777 installer.sh && bash installer.sh'",
+		"pip install -r requirements.txt"
+	],
 	"containerEnv": {
 		"TZ": "Asia/Tokyo"
 	},
