--- a/tempo/tempo-config.yaml
+++ b/tempo/tempo-config.yaml
@@ -7,6 +7,8 @@ distributor:
       protocols:
         grpc:
           endpoint: 0.0.0.0:4317
+        http:
+          endpoint: 0.0.0.0:4318
 
 storage:
   trace:
