--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,8 @@
 	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-22-bookworm",
 	"features": {
 		"ghcr.io/devcontainers/features/git:1": {},
-		"ghcr.io/duduribeiro/devcontainer-features/tmux:1": {}
+		"ghcr.io/duduribeiro/devcontainer-features/tmux:1": {},
+		"ghcr.io/devcontainers/features/go:1": {}
 	},
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
@@ -27,9 +28,9 @@
 		}
 	},
 	"postCreateCommand": [
-		"wget https://raw.githubusercontent.com/kitakou0313/dotfiles/main/installer.sh",
-		"chmod 777 installer.sh",
-		"bash installer.sh"
+		"wget -P /tmp/installer.sh https://raw.githubusercontent.com/kitakou0313/dotfiles/main/installer.sh",
+		"bash /tmp/installer.sh",
+		"go install github.com/open-telemetry/opentelemetry-collector-contrib/cmd/telemetrygen@latest"
 	],
 	"containerEnv": {
 		"TZ": "Asia/Tokyo"
