--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,11 +27,7 @@
 			]
 		}
 	},
-	"postCreateCommand": [
-		"wget -P /tmp/installer.sh https://raw.githubusercontent.com/kitakou0313/dotfiles/main/installer.sh",
-		"bash /tmp/installer.sh",
-		"go install github.com/open-telemetry/opentelemetry-collector-contrib/cmd/telemetrygen@latest"
-	],
+	"postCreateCommand": "bash /workspaces/grafana-tempo-mcp/.devcontainer/init.sh",
 	"containerEnv": {
 		"TZ": "Asia/Tokyo"
 	}
