--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,10 @@
 	"postCreateCommand": "go install github.com/open-telemetry/opentelemetry-collector-contrib/cmd/telemetrygen@latest",
 	"containerEnv": {
 		"TZ": "Asia/Tokyo"
-	}
+	},
+	"runArgs": [
+		"--network=tempo_default"
+	]
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
