--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
+    "target": "ES2020",
     "module": "ESNext",
+    "moduleResolution": "node10",
     "outDir": "./build",
     "rootDir": "./src",
     "strict": true,
