--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "start": "node build/index.js",
     "watch": "tsc --watch",
     "inspector": "npx @modelcontextprotocol/inspector build/index.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:watch": "jest --watch"
+    "test": "vitest"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "0.6.0",
@@ -29,6 +28,7 @@
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "ts-jest": "^29.3.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^3.1.1"
   }
 }
