--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.8.4"
   },
   "devDependencies": {
+    "@modelcontextprotocol/inspector": "^0.11.0",
     "@types/node": "^20.11.24",
     "typescript": "^5.3.3",
     "vitest": "^3.1.1"
