fix: fix dev command

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   ],
   "scripts": {
     "build": "tsc",
-    "start": "node build/index.js",
+    "start": "npm run build && node build/index.js",
     "watch": "tsc --watch",
-    "inspector": "npx @modelcontextprotocol/inspector node build/index.js",
+    "inspector": "npm run build && npx @modelcontextprotocol/inspector node build/index.js",
     "test": "vitest"
   },
   "dependencies": {
