--- a/tempo/docker-compose.yml
+++ b/tempo/docker-compose.yml
@@ -15,6 +15,23 @@ services:
       - "4318:4318"  # OTLP HTTP
     restart: unless-stopped
 
+  # Prometheus - メトリクスモニタリング
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+      - --storage.tsdb.path=/prometheus
+      - --web.console.libraries=/etc/prometheus/console_libraries
+      - --web.console.templates=/etc/prometheus/consoles
+      - --web.enable-lifecycle
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus-data:/prometheus
+    ports:
+      - "9090:9090"
+    restart: unless-stopped
+
   # Grafana - 可視化ダッシュボード
   grafana:
     image: grafana/grafana:latest
