fix: fix settings

--- a/tempo/tempo-config.yaml
+++ b/tempo/tempo-config.yaml
@@ -33,6 +33,9 @@ metrics_generator:
     remote_write:
       - url: http://prometheus:9090/api/v1/write
         send_exemplars: true
+  processor:
+    span_metrics:
+      dimensions: ["http.target", "http.method"]
 
 overrides:
   metrics_generator_processors: [service-graphs, span-metrics]
