--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,8 @@
 	"features": {
 		"ghcr.io/devcontainers/features/git:1": {},
 		"ghcr.io/duduribeiro/devcontainer-features/tmux:1": {},
-		"ghcr.io/devcontainers/features/go:1": {}
+		"ghcr.io/devcontainers/features/go:1": {},
+		"ghcr.io/meaningful-ooo/devcontainer-features/fish:2": {}
 	},
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
