--- a/tempo/docker-compose.yml
+++ b/tempo/docker-compose.yml
@@ -1,51 +1,72 @@
-version: '3'
-
 services:
-  # Grafana Tempo - 分散トレーシングバックエンド
-  tempo:
-    image: grafana/tempo:2.7.2
-    container_name: tempo
-    command: [ "-config.file=/etc/tempo.yaml" ]
-    volumes:
-      - ./tempo-config.yaml:/etc/tempo.yaml
-      - ./tempo-data:/tmp/tempo
-    ports:
-      - "3200:3200"  # Tempo APIポート
-      - "4317:4317"  # OTLP gRPC"
-      - "4318:4318"  # OTLP HTTP
-    restart: unless-stopped
 
-  # Prometheus - メトリクスモニタリング
+  # Tempo runs as user 10001, and docker compose creates the volume as root.
+  # As such, we need to chown the volume in order for Tempo to start correctly.
+  init:
+    image: &tempoImage grafana/tempo:latest
+    user: root
+    entrypoint:
+      - "chown"
+      - "10001:10001"
+      - "/var/tempo"
+    volumes:
+      - ./tempo-data:/var/tempo
+
+  memcached:
+    image: memcached:1.6.29
+    container_name: memcached
+    ports:
+      - "11211:11211"
+    environment:
+      - MEMCACHED_MAX_MEMORY=64m  # Set the maximum memory usage
+      - MEMCACHED_THREADS=4       # Number of threads to use
+
+  tempo:
+    image: *tempoImage
+    command: [ "-config.file=/etc/tempo-config.yaml" ]
+    volumes:
+      - ./tempo-config.yaml:/etc/tempo-config.yaml
+      - ./tempo-data:/var/tempo
+    ports:
+      - "14268:14268"  # jaeger ingest
+      - "3200:3200"   # tempo
+      - "9095:9095" # tempo grpc
+      - "4317:4317"  # otlp grpc
+      - "4318:4318"  # otlp http
+      - "9411:9411"   # zipkin
+    depends_on:
+      - init
+      - memcached
+
+  k6-tracing:
+    image: ghcr.io/grafana/xk6-client-tracing:v0.0.7
+    environment:
+      - ENDPOINT=tempo:4317
+    restart: always
+    depends_on:
+      - tempo
+
   prometheus:
     image: prom/prometheus:latest
-    container_name: prometheus
     command:
-      - --config.file=/etc/prometheus/prometheus.yml
-      - --storage.tsdb.path=/prometheus
-      - --web.console.libraries=/etc/prometheus/console_libraries
-      - --web.console.templates=/etc/prometheus/consoles
-      - --web.enable-lifecycle
+      - --config.file=/etc/prometheus.yml
       - --web.enable-remote-write-receiver
+      - --enable-feature=exemplar-storage
+      - --enable-feature=native-histograms
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-      - ./prometheus-data:/prometheus
+      - ./prometheus.yml:/etc/prometheus.yml
     ports:
       - "9090:9090"
-    restart: unless-stopped
 
-  # Grafana - 可視化ダッシュボード
   grafana:
-    image: grafana/grafana:12.0.0
-    container_name: grafana
+    image: grafana/grafana:11.5.2
     volumes:
-      - ./grafana-data:/var/lib/grafana
-      - ./grafana-provisioning:/etc/grafana/provisioning
+      - ./grafana-provisioning/datasources/grafana-datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
     environment:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
       - GF_AUTH_DISABLE_LOGIN_FORM=true
+      - GF_FEATURE_TOGGLES_ENABLE=traceqlEditor metricsSummary
+      - GF_INSTALL_PLUGINS=https://storage.googleapis.com/integration-artifacts/grafana-exploretraces-app/grafana-exploretraces-app-latest.zip;grafana-traces-app
     ports:
       - "3000:3000"
-    depends_on:
-      - tempo
-    restart: unless-stopped
